# MBHaxeAndroidLibs

./: README.md
src/main/: build.hxml
src/main/cpp/: CMakeLists.txt  jni.c
src/main/cpp/hashlink/libs/: CMakeLists.txt
src/main/cpp/hashlink/libs/directx/: dx12.cpp  window.c
src/main/cpp/hashlink/libs/sdl/: gl.c.bak  sdl.c
src/main/cpp/hashlink/libs/ssl/: CMakeLists.txt  ssl.c
src/main/cpp/hashlink/libs/uv/: uv.c
src/main/cpp/hashlink/other/haxelib/templates/vs2015/: __file__.vcxproj
src/main/cpp/hashlink/other/memory/: Memory.hx
src/main/cpp/hashlink/src/: allocator.c  allocator.h  gc.c  hl.h  jit.c  opcodes.h
src/main/cpp/hashlink/src/std/: array.c  buffer.c  error.c  file.c  obj.c  process.c  sys.c  sys_android.c  thread.c  types.c
src/main/cpp/openal-nativetools/: CMakeLists.txt
src/main/cpp/openal-soft/Alc/: bformatdec.c  bformatdec.h
src/main/java/org/haxe/: HashLinkActivity.java
src/main/java/org/libsdl/app/: SDLActivity.java  SDLSurface.java
